<resources>


    <string name="app_name">IGram Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="automator">Assistant</string>

    <string name="digitsabcABC123">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="digitsABC123.">abcdefghijklmnopqrstuvwxyz1234567890.</string>
    <string name="digits123">0123456789</string>
    <string name="digits123_">0123456789+</string>
    <string name="digitsEmail">abcdefghijklmnopqrstuvwxyz1234567890@._</string>
    <string name="currency">₹</string>
    <string name="ccode">+91</string>

    <string name="signup">Signup</string>
    <string name="welcome">Welcome to IGram Assistant</string>
    <string name="tagline">Break Pot Win Lot !</string>
    <string name="emailorphone">Enter Email or Phone</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_a_account">Don\'t have a account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="logingoogle">Login with Google</string>
    <string name="email">Email</string>
    <string name="name">Choose a screen name</string>
    <string name="tnc"><![CDATA[By continuing you agree to our <br><b><u>Terms and Contidions</u></b>.]]></string>
    <string name="already_have_a_account">Already have a account ?</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="finish">Finish</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="retry_in_30s">Retry in %ds</string>
    <string name="invalidemailorpaswd">Invalid email or password</string>
    <string name="changepassword">Change Password</string>
    <string name="verifyphone">Verify Phone</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="title_wallet">Wallet</string>
    <string name="sampleusername">Bill Gates</string>
    <string name="your_wallet_balance">Your wallet balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="help_wallet_bal">Credits balance you can use to play games and win big rewards .</string>
    <string name="help_award_bal">Reward Credits you can shop with or withdraw to your bank account .</string>
    <string name="help_referral_bal">Earnings by referring app to your friends</string>
    <string name="help_earn_bal">Earn credits by watching ads or doing simple actions .</string>
    <string name="help_withdraw">Withdraw the rewarded balance to your bank account .</string>
    <string name="help_shop">Use the rewards to redeem exciting coupons , merchandise and much more .</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="add_credits">Add Credits</string>
    <string name="help_add_money">Compete with other players using credits to win big awards . You can then use the awarded credits to shop exciting stuff or withdraw to you bank account .</string>
    <string name="all">All</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help_and_guide">Help and Guide</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="referral">Referrals</string>
    <string name="weekly_leaderboard">Weekly Leaderboard</string>
    <string name="refer">Refer</string>
    <string name="games">Games</string>
    <string name="game">Game</string>
    <string name="basic_info">Update your information</string>
    <string name="mygames">My Games</string>
    <string name="awards">Rewards</string>
    <string name="add">Add</string>
    <string name="error_msg">An unexpected error occurred ! </string>
    <string name="error_msg_restart">An unexpected error occurred ! Please restart the App .</string>
    <string name="error_msg_try_again">There was an error processing your request ! Please try again later .</string>
    <string name="must_be18">You must be at least 18 years old to continue !</string>
    <string name="invalidotp">Invalid OTP</string>
    <string name="retry">Retry</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="processing">Please wait…</string>
    <string name="reset_sent">Password Reset Request Processed ! </string>
    <string name="reset_sent_info">If an account exists with the given details , you will receive an email with a link . Kindly use the link to reset your password .</string>
    <string name="reload">Reload</string>
    <string name="err_pls_login">Please login to continue !</string>
    <string name="error">Error</string>
    <string name="pay">Pay</string>
    <string name="are_you_sure_back">Are you sure you want to exit ?</string>
    <string name="confirm">Confirm</string>
    <string name="txn_failed">Transaction failed  </string>
    <string name="payment_success">Payment Success</string>
    <string name="wallet_updated">You transaction has completed successfully and your wallet balance has been updated .</string>
    <string name="award_bal">"Award Balance : "</string>
    <string name="ref_bal">"Total Referral Earnings : "</string>
    <string name="orderNo">"Order No "</string>
    <string name="txn_success">Transaction Successful</string>
    <string name="txn_initated">Processing</string>
    <string name="your_order_id">Your %s order id</string>
    <string name="redeem">Redeem</string>
    <string name="have_a_ref_code">Have a referral code ?</string>
    <string name="enter_ref_code">Enter your friend\'s referral code</string>
    <string name="referral_message">Hey ! Checkout %s . It provides exciting and simple new ways to earn rewards . Use my referral code %s so that we both can get referral bonus ! Download %s</string>
    <string name="enter_details">Enter more details</string>
    <string name="earn">Earn</string>
    <string name="get_started">Get Started</string>
    <string name="no_network">Network not available ! Could not establish a connection to the server . Please check your network connectivity and restart the app .</string>
    <string name="shop">Shop</string>
    <string name="clear">Clear</string>
    <string name="you_have_notifications">You have %s new notifications !</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="select_game_credits">Select Game Room</string>
    <string name="insufficient_credits_header">Insufficient Credits</string>
    <string name="insufficient_credits">You don\'t have sufficient credits to enter this game room . Please add more credits to continue .</string>
    <string name="practice">Free</string>
    <string name="possible_rewards">Possible reward of %s %s</string>
    <string name="brush_up_practice_txt">Brush up your skills with practice matches</string>
    <string name="start_game">Start Game</string>
    <string name="show">Show</string>
    <string name="view">View</string>
    <string name="you">You</string>
    <string name="searching_for_player">Connecting to a opponent…</string>
    <string name="no_opponent">Couldn\'t find a opponent ! Please try again .</string>
    <string name="watch">Watch !</string>
    <string name="break_the_pot_with_highest_values">Your Turn</string>
    <string name="starting">Starting Game…</string>
    <string name="timeup">Time Up !</string>
    <string name="turn">turn</string>
    <string name="guide">Guide</string>
    <string name="how_to_play">How to play ? Learn the tips and tricks to win .</string>
    <string name="help">Help</string>

    <string name="you_lost">Better luck next time.</string>
    <string name="you_won">You won %s %d ! !</string>
    <string name="won_info">You destroyed %s by %d points .</string>
    <string name="defeated_info">%s defeated you by just %d points . Close Call !</string>
    <string name="ask_for_rematch">Ask for Rematch</string>
    <string name="rematch">Rematch ?</string>
    <string name="rematch_requested">%s has requested for a rematch .</string>
    <string name="accept">Accept</string>
    <string name="waiting_for_player">Waiting for %s to accept your rematch request .</string>
    <string name="accept_rematch">Accept Rematch</string>
    <string name="terms">Terms and Conditions</string>
    <string name="send">Send</string>
    <string name="request">Request</string>
    <string name="paytm_number">Paytm Number</string>
    <string name="enter_your_paytm_number">Enter your Paytm number</string>
    <string name="upi_id">UPI ID</string>
    <string name="enter_upi_id">Enter your UPI Id</string>
    <string name="enter_amount_to_withdraw">Enter amount to withdraw</string>
    <string name="withdraw_it_might_take">It might take 5–7 business days for the credits to be approved and deposited .</string>
    <string name="select_pay_method">Select payment method</string>
    <string name="available_award_balance">Available award balance : %s %s</string>
    <string name="available_award_balance_d">Available award balance : %s %s \n Available credit balance : %s %s .\nCredits will be deducted from your award balance . In case you don\'t have enough awards your credits balance will be used .</string>
    <string name="min_withdrawl">Minimum withdrawal amount is %s</string>
    <string name="insufficient_award">insufficient award balance .</string>
    <string name="select_pay">Please select a payment method .</string>
    <string name="requesting">Sending Request…</string>
    <string name="find_char">Quickly Tap on </string>
    <string name="get_ready">Get Ready for next Round !</string>
    <string name="expires">Valid till %s</string>
    <string name="confirm_game">Start game room for %s %s ? \n\n Tip : Once game starts Tap on the box with the number shown at the top as quickly as possible to win.</string>
    <string name="confirm_redeem">Redeem for %s %s</string>
    <string name="rewards_success">Redeem Success ! Tap the code to copy and use it . You can also view all your rewards by tapping on Rewards in home screen menu .</string>
    <string name="awards_possible">Awards : %s %s</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="auto_msg_start">Reply</string>
    <string name="enable">Enable</string>
    <string name="auto_msgs_desc">Instant auto replies to your inbox messages</string>


</resources>