<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="30dp"
    android:background="@color/colorBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cont_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            app:endIconMode="clear_text"
            android:id="@+id/contentphone"
            app:startIconDrawable="@drawable/phone"
            style="@style/Theme.DotPot.TextInputStyle">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.DotPot.TextEditTextStyle"
                android:id="@+id/phone"
                android:maxLength="10"
                android:maxLines="1"
                android:digits="@string/digits123"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textColor="@color/colorTextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            app:endIconMode="clear_text"
            android:id="@+id/contentpaswd"
            app:startIconDrawable="@drawable/ic_password"
            style="@style/Theme.DotPot.TextInputStyle">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.DotPot.TextEditTextStyle"
                android:id="@+id/password"
                android:digits="@string/digits123"
                android:maxLines="1"
                android:inputType="number"
                android:imeOptions="actionGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:paddingTop="20dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_selector_rounded_btn_filled"
                android:padding="10dp"
                android:text="@string/send_otp" />

        </LinearLayout>


        <TextView
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:id="@+id/subtext"
            android:fontFamily="@font/font_text"
            android:textSize="@dimen/text_subhead"
            android:gravity="center"
            android:text="@string/retry_in_30s"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@+id/head"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>