<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cont_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailorphone"
            android:id="@+id/contentmail"
            app:startIconDrawable="@drawable/ic_mail"
            style="@style/Theme.DotPot.TextInputStyle">

        <com.google.android.material.textfield.TextInputEditText
                style="@style/Theme.DotPot.TextEditTextStyle"
                 android:id="@+id/email"
            android:maxLines="1"
            android:digits="@string/digitsEmail"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:id="@+id/contentpaswd"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password"
            style="@style/Theme.DotPot.TextInputStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paswd"
                style="@style/Theme.DotPot.TextEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:paddingTop="20dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:theme="@style/Theme.DotPot.Highighted"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_selector_rounded_btn_filled"
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logingoogle" />


            <Button
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/bg_selector_rounded_btn_filled"
                android:padding="10dp"
                android:text="@string/login" />

        </LinearLayout>

        <TextView
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/forgotPassword"
            android:fontFamily="@font/font_text"
            android:textSize="@dimen/text_subhead"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccentLight"
            app:layout_constraintLeft_toLeftOf="@+id/head"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>