<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:padding="20dp"
    android:layout_margin="10dp"
    android:background="@drawable/bg_round_filled_dark"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:maxWidth="170dp"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/contWalletBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/font_text"
            android:text="@string/currency"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_head" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/walletBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_text"
            android:text="36.77"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_xxhead" />


    </LinearLayout>

    <TextView
        android:gravity="center"
        android:id="@+id/yourWalletBalanceTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_text"
        android:maxLines="2"
        android:minLines="2"
        android:ellipsize="marquee"
        android:text="@string/your_wallet_balance"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintRight_toRightOf="@+id/contWalletBalance"
        app:layout_constraintLeft_toLeftOf="@+id/contWalletBalance"
        app:layout_constraintTop_toBottomOf="@+id/contWalletBalance" />

    <Button
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_selector_rounded_btn_filled"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourWalletBalanceTxt"
        android:theme="@style/Theme.DotPot.DarkGreen"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_credits" />





</androidx.constraintlayout.widget.ConstraintLayout>